# combos

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  README.md  ROADMAP.md  combos.spec  main.py  pyproject.toml  requirements.txt  version.py
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: consola.py  constantes.py  flujo.py
config/: plantilla.json  resumen.json
docs/: DECISIONS.md
dominio/: duplicados.py  envolventes.py  formateador.py  generador.py  lector_plantilla.py  lector_yaml.py  modelos.py  parametros.py  persistencia_sesion.py  preponderancia.py  sesion.py
exportadores/: por_combinacion.yaml  por_componente.yaml  sap2000.yaml
infraestructura/: archivo_combos.py  config_interna.py  encabezado_excel.py  estilos_excel.py  exportador.py  generador_plantilla.py  guardado_excel.py  lector_excel.py  rutas.py
installer/: combos.iss
profiles/: ejemplo_reglamento.yaml
src/combos/: __init__.py  __main__.py  version.py
src/combos/cli/: consola.py  constantes.py  flujo.py  main.py
src/combos/dominio/: duplicados.py  envolventes.py  formateador.py  generador.py  lector_plantilla.py  lector_yaml.py  modelos.py  parametros.py  persistencia_sesion.py  preponderancia.py  sesion.py
src/combos/exportadores/: sap2000.yaml
src/combos/infraestructura/: archivo_combos.py  config_interna.py  encabezado_excel.py  estilos_excel.py  exportador.py  generador_plantilla.py  guardado_excel.py  lector_excel.py  log_errores.py  rutas.py  sanitizacion_excel.py
src/combos/profiles/: cirsoc2005.yaml  cirsoc2005_actualizado.yaml  cirsoc2005_reducido.yaml
tests/: conftest.py  test_integracion_cirsoc2005.py
tests/dominio/: test_duplicados.py  test_envolventes.py  test_formateador.py  test_generador.py  test_lector_plantilla.py  test_lector_yaml.py  test_parametros.py  test_persistencia_sesion.py  test_preponderancia.py  test_sesion.py
tests/infraestructura/: test_log_errores.py
