[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "combos"
version = "1.1.0"
description = "Generador de combinaciones de carga estructural para ingeniería civil"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sebastián A. Roskopf", email = "sebastianroskopf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/seba-rsk/combos"
Repository = "https://github.com/seba-rsk/combos"

[project.scripts]
combos = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: depende de archivos reales del repo, no de red ni servicios externos.",
]
