[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "combos"
version = "1.1.0"
description = "Generador de combinaciones de carga estructural para ingeniería civil"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sebastián A. Roskopf", email = "sebastianroskopf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/seba-rsk/combos"
Repository = "https://github.com/seba-rsk/combos"

[project.scripts]
combos = "combos.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"combos.profiles" = ["*.yaml"]
"combos.exportadores" = ["*.yaml"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: depende de archivos reales del repo, no de red ni servicios externos.",
]
